update the first page

--- a/index.html
+++ b/index.html
@@ -65,17 +65,15 @@
         <div class="card-deck">
             <div class="card">
                 <a href="#" class="card-link">
-                    <img class="card-img-top" src="images/stories.jpg" alt="stories">
-                    <h4 class="content card-title">The Journey So Far</h4>
-                    <p class="card-text content">Our Stories</p>
+                    <img class="card-img-top" src="images/stories.png" alt="stories">
+                    <h4 class="content card-title">Karanji Lake</h4>
                 </a>
             </div>
 
             <div class="card">
                 <a href="" class="card-link">
-                    <img class="card-img-top" src="images/christmas.jpg" alt="" class="img-fluid">
-                    <h4 class="content card-title">Christmas Party</h4>
-                    <p class="card-text content card-text">Our Christmas</p>
+                    <img class="card-img-top" src="images/christmas.png" alt="" class="img-fluid">
+                    <h4 class="content card-title">Mysore Palace</h4>
                 </a>
             </div>
         </div>
@@ -90,23 +88,20 @@
         <div class="card-deck">
             <div class="card">
                 <a href="#" class="card-link">
-                    <img src="images/1.jpg" class="card-img-top" alt="">
-                    <h5 class="card-title content">Title 1</h5>
-                    <p class="card-text content">Write the text for the title 1</p>
+                    <img src="images/1.png" class="card-img-top" alt="">
+                    <h5 class="card-title content">Brindavan Gardens</h5>
                 </a>
             </div>
             <div class="card">
                 <a href="#" class="card-link">
-                    <img src="images/2.jpeg" class="card-img-top" alt="">
-                    <h5 class="card-title content">Title 2</h5>
-                    <p class="card-text content">Write the text for the title 2</p>
+                    <img src="images/2.png" class="card-img-top" alt="">
+                    <h5 class="card-title content">St. Philomena Church</h5>
                 </a>
             </div>
             <div class="card">
                 <a href="#" class="card-link">
-                    <img src="images/3.jpeg" class="card-img-top" alt="">
-                    <h5 class="card-title content">Title 3</h5>
-                    <p class="card-text content">Write the text for the title 3</p>
+                    <img src="images/3.png" class="card-img-top" alt="">
+                    <h5 class="card-title content">Lalitha Mahal</h5>
                 </a>
             </div>
         </div>
@@ -119,23 +114,20 @@
         <div class="card-deck">
             <div class="card">
                 <a href="#" class="card-link">
-                    <img src="images/4.jpg" class="card-img-top" alt="">
-                    <h5 class="card-title content">Title 4</h5>
-                    <p class="card-text content">Write the text for the title 4</p>
+                    <img src="images/4.jpeg" class="card-img-top" alt="">
+                    <h5 class="card-title content">Railway Museum</h5>
                 </a>
             </div>
             <div class="card">
                 <a href="#" class="card-link">
-                    <img src="images/5.jpg" class="card-img-top" alt="">
-                    <h5 class="card-title content">Title 5</h5>
-                    <p class="card-text content">Write the text for the title 5</p>
+                    <img src="images/5.png" class="card-img-top" alt="">
+                    <h5 class="card-title content">Somnathpur</h5>
                 </a>
             </div>
             <div class="card">
                 <a href="#" class="card-link">
-                    <img src="images/6.jpg" class="card-img-top" alt="">
-                    <h5 class="card-title content">Title 6</h5>
-                    <p class="card-text content">Write the text for the title 6</p>
+                    <img src="images/6.png" class="card-img-top" alt="">
+                    <h5 class="card-title content">Shivanasamudra Falls</h5>
                 </a>
             </div>
 
