--- a/index.html
+++ b/index.html
@@ -17,164 +17,165 @@
 </head>
 
 <body>
+    <div id="mainscreen">
 
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a href="index.html" class="navbar-brand">Brand Name</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- Navigation Bar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a href="#" class="navbar-brand">Brand Name</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
 
-        <div class="collapse navbar-collapse" id="navbarContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Profile
+            <div class="collapse navbar-collapse" id="navbarContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <div class="dropdown">
+                            <button class="btn dropdown-toggle btn-primary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Profile
                         </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="signup">New User</a>
-                            <a class="dropdown-item" href="login">Login</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item" href="signup">New User</a>
+                                <a class="dropdown-item" href="login">Login</a>
+                            </div>
                         </div>
-                    </div>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="">Journal</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-            </ul>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="">Journal</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+
+        <!-- Body Part of the first Page -->
+
+        <!-- One card Deck  -->
+        <div class="container content deck">
+            <img src="images/top.jpg" alt="" class="card-img-top first">
         </div>
-    </nav>
 
-
-    <!-- Body Part of the first Page -->
-
-    <!-- One card Deck  -->
-    <div class="container content deck">
-        <img src="images/top.jpg" alt="" class="card-img-top first">
-    </div>
-
-    <!-- Two Card Deck -->
-    <div class="container deck">
-        <div class="card-deck">
-            <div class="card">
-                <a href="#" class="card-link">
-                    <img class="card-img-top" src="images/stories.png" alt="stories">
-                    <h4 class="content card-title">Karanji Lake</h4>
-                </a>
-            </div>
-
-            <div class="card">
-                <a href="" class="card-link">
-                    <img class="card-img-top" src="images/christmas.png" alt="" class="img-fluid">
-                    <h4 class="content card-title">Mysore Palace</h4>
-                </a>
-            </div>
-        </div>
-    </div>
-    </div>
-    </div>
-
-    <!-- <hr> -->
-
-    <!-- Three Card Deck -->
-    <div class="container deck">
-        <div class="card-deck">
-            <div class="card">
-                <a href="#" class="card-link">
-                    <img src="images/1.png" class="card-img-top" alt="">
-                    <h5 class="card-title content">Brindavan Gardens</h5>
-                </a>
-            </div>
-            <div class="card">
-                <a href="#" class="card-link">
-                    <img src="images/2.png" class="card-img-top" alt="">
-                    <h5 class="card-title content">St. Philomena Church</h5>
-                </a>
-            </div>
-            <div class="card">
-                <a href="#" class="card-link">
-                    <img src="images/3.png" class="card-img-top" alt="">
-                    <h5 class="card-title content">Lalitha Mahal</h5>
-                </a>
-            </div>
-        </div>
-    </div>
-
-    <!-- <hr> -->
-
-    <!-- Three Card Deck -->
-    <div class="container deck">
-        <div class="card-deck">
-            <div class="card">
-                <a href="#" class="card-link">
-                    <img src="images/4.jpeg" class="card-img-top" alt="">
-                    <h5 class="card-title content">Railway Museum</h5>
-                </a>
-            </div>
-            <div class="card">
-                <a href="#" class="card-link">
-                    <img src="images/5.png" class="card-img-top" alt="">
-                    <h5 class="card-title content">Somnathpur</h5>
-                </a>
-            </div>
-            <div class="card">
-                <a href="#" class="card-link">
-                    <img src="images/6.png" class="card-img-top" alt="">
-                    <h5 class="card-title content">Shivanasamudra Falls</h5>
-                </a>
-            </div>
-
-        </div>
-    </div>
-
-    <div id="contact">
-        <h2>Contact Us</h2>
+        <!-- Two Card Deck -->
         <div class="container deck">
             <div class="card-deck">
                 <div class="card">
-                    <img src="images/vaibhavi.JPG" class="card-img-top vaibhavi" alt="">
-                    <h5 class="card-title content">Vaibhavi Jha</h5>
-                    <div class="container">
-                        <a href="https://www.facebook.com/profile.php?id=100007359661877" class="card-link">facebook</a>
-                        <a href="https://www.instagram.com/jha.vaibhavi/">Instagram</a>
-                        <p>Phone number : +91 85270 92466 </p>
-                    </div>
+                    <a href="#" class="card-link">
+                        <img class="card-img-top" src="images/stories.png" alt="stories">
+                        <h4 class="content card-title">Karanji Lake</h4>
+                    </a>
+                </div>
+
+                <div class="card">
+                    <a href="" class="card-link">
+                        <img class="card-img-top" src="images/christmas.png" alt="" class="img-fluid">
+                        <h4 class="content card-title">Mysore Palace</h4>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- <hr> -->
+
+        <!-- Three Card Deck -->
+        <div class="container deck">
+            <div class="card-deck">
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="images/1.png" class="card-img-top" alt="">
+                        <h5 class="card-title content">Brindavan Gardens</h5>
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="images/rahul.JPG" class="card-img-top rahul" alt="">
-                    <h5 class="card-title content">Rahul Aggarwal</h5>
-                    <div class="container">
-                        <a href="https://www.facebook.com/profile.php?id=100007359661877" class="card-link">facebook</a>
-                        <a href="https://www.instagram.com/jha.vaibhavi/">Instagram</a>
-                        <p>Phone number : +91 9818576300</p>
-                    </div>
+                    <a href="#" class="card-link">
+                        <img src="images/2.png" class="card-img-top" alt="">
+                        <h5 class="card-title content">St. Philomena Church</h5>
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="images/divya.JPG" class="card-img-top divya" alt="">
-                    <h5 class="card-title content">Divya</h5>
-                    <div class="container">
-                        <a href="https://www.facebook.com/profile.php?id=100007359661877" class="card-link">facebook</a>
-                        <a href="https://www.instagram.com/jha.vaibhavi/">Instagram</a>
-                        <p>Phone number : +91 80763 26108</p>
-                    </div>
+                    <a href="#" class="card-link">
+                        <img src="images/3.png" class="card-img-top" alt="">
+                        <h5 class="card-title content">Lalitha Mahal</h5>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- <hr> -->
+
+        <!-- Three Card Deck -->
+        <div class="container deck">
+            <div class="card-deck">
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="images/4.jpeg" class="card-img-top" alt="">
+                        <h5 class="card-title content">Railway Museum</h5>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="images/5.png" class="card-img-top" alt="">
+                        <h5 class="card-title content">Somnathpur</h5>
+                    </a>
+                </div>
+                <div class="card">
+                    <a href="#" class="card-link">
+                        <img src="images/6.png" class="card-img-top" alt="">
+                        <h5 class="card-title content">Shivanasamudra Falls</h5>
+                    </a>
                 </div>
 
             </div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-        <script src="script.js"></script>
+        <div id="contact">
+            <h2>Contact Us</h2>
+            <div class="container deck">
+                <div class="card-deck" id="contacts">
+                    <div class="card">
+                        <img src="images/vaibhavi.JPG" class="card-img-top vaibhavi" alt="">
+                        <h5 class="card-title content">Vaibhavi Jha</h5>
+                        <div class="container">
+                            <a href="https://www.facebook.com/profile.php?id=100007359661877" class="card-link">facebook</a>
+                            <a href="https://www.instagram.com/jha.vaibhavi/">Instagram</a>
+                            <p>Phone number : +91 85270 92466 </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="images/rahul.JPG" class="card-img-top rahul" alt="">
+                        <h5 class="card-title content">Rahul Aggarwal</h5>
+                        <div class="container">
+                            <a href="https://www.facebook.com/profile.php?id=100007359661877" class="card-link">facebook</a>
+                            <a href="https://www.instagram.com/jha.vaibhavi/">Instagram</a>
+                            <p>Phone number : +91 9818576300</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="images/divya.JPG" class="card-img-top divya" alt="">
+                        <h5 class="card-title content">Divya</h5>
+                        <div class="container">
+                            <a href="https://www.facebook.com/profile.php?id=100007359661877" class="card-link">facebook</a>
+                            <a href="https://www.instagram.com/jha.vaibhavi/">Instagram</a>
+                            <p>Phone number : +91 80763 26108</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <footer>
+                <div class="footer-copyright text-center py-3 footer-primary">© 2020 Copyright: Hackslash </div>
+            </footer>
+        </div>
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 
-<footer>
-    <div class="footer-copyright text-center py-3 footer-primary">© 2020 Copyright: ❤ Hackslash ❤</div>
-
-</footer>
 
 </html>
