--- a/index.html
+++ b/index.html
@@ -94,26 +94,26 @@
                 <!-- The slideshow -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <a href="">
+                        <a href="culture">
                             <img src="images/1.png" alt="Los Angeles" class="third-images">
                         </a>
-                        <a href="">
+                        <a href="church">
                             <img src="images/2.png" alt="Chicago" class="third-images">
                         </a>
                     </div>
                     <div class="carousel-item">
-                        <a href="">
+                        <a href="jagmohar">
                             <img src="images/3.png" alt="New York" class="third-images">
                         </a>
-                        <a href="">
+                        <a href="transport">
                             <img src="images/4.jpeg" alt="Los Angeles" class="third-images">
                         </a>
                     </div>
                     <div class="carousel-item">
-                        <a href="">
+                        <a href="temple">
                             <img src="images/5.png" alt="Chicago" class="third-images">
                         </a>
-                        <a href="">
+                        <a href="environment">
                             <img src="images/6.png" alt="New York" class="third-images">
                         </a>
                     </div>
